--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -189,7 +189,7 @@
 									<h1>Entry Log</h1>
 								</div>
 
-								@if (Model.UserType != "LGU Staff")
+								@if (Model.UserType == "Admin" || Model.assignmentInfo.status == "Assigned")
 								{
 									<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
 										<a id="checkInButton" class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/checkin?centerLogID=@Model.logInfo.centerLogID">
