form box widden

--- a/Pages/Login/Index.cshtml
+++ b/Pages/Login/Index.cshtml
@@ -59,6 +59,8 @@
 
     /* Style your form container and form elements as needed */
     .form-box {
+        width: 80%; /* Set the desired width */
+        max-width: 400px; /* Set a maximum width if needed */
         background: #fff;
         padding: 20px;
         border-radius: 5px;
@@ -151,9 +153,12 @@
                 </div>
             </div>
 
+
+
+
             <button type="submit" class="btnlogin-popup">Login</button>
             
-            <div class="d-flex justify-content- align-items-center">
+            <div class="d-flex justify-content-center align-items-center">
                 <a href="#" style="text-decoration: none;">Forgot Password?</a>
             </div>
         </form>
