--- a/Pages/Login/Index.cshtml
+++ b/Pages/Login/Index.cshtml
@@ -120,9 +120,6 @@
     .btnlogin-popup{
         width: 100%;
         height: 45px;
-        background: #3f8f8b;
-        border: none;
-        outline: none;
         border-radius: 6px;
         cursor: pointer;
         color: #ffffff;
@@ -153,11 +150,9 @@
             </div>
 
 
-
-
-            <button type="submit" class="btnlogin-popup">Login</button>
+            <button type="submit" class="btn btn-primary btnlogin-popup">Login</button>
             
-            <div class="d-flex justify-content-center align-items-center">
+            <div class="mt-3 d-flex justify-content-center align-items-center">
                 <a href="#" style="text-decoration: none;">Forgot Password?</a>
             </div>
         </form>
