Added mailto link in email address

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -124,12 +124,16 @@
         <div class="mx-auto col-lg-6">
             <div class="text-start">
                 <div class="row pt-3">
-                    <h6 class="text-white"><i class="bi bi-envelope-fill pe-2"></i><b>Email address:</b></h6>
-                    <p>agapayaidproject@gmail.com</p>
+                    <h6 class="text-white"><i class="bi bi-envelope-fill pe-2"></i><b>Email Address</b></h6>
+                    <p>
+                        <a href="mailto:agapayaidproject@gmail.com" style="text-decoration:none; color:white">
+                            agapayaidproject@gmail.com
+                        </a>
+                    </p>
                 </div>
 
                 <div class="row">
-                    <h6 class="text-white"><i class="bi bi-telephone-fill pe-2"></i><b>Contact Number:</b></h6>
+                    <h6 class="text-white"><i class="bi bi-telephone-fill pe-2"></i><b>Contact Number</b></h6>
                     <p>(+63) 927 161 9247</p>
                 </div>
             </div>
