Few changes in disaster profile

--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -63,12 +63,12 @@
 						<a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
+						<a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</a>
 					</li>
-					@if (@Model.GetRemainingInventoryCount() == 0)
+					@if (@Model.ecLogNotif.remainingInventoryCount == 0)
 					{
 						<li class="nav-item">
 							<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
@@ -80,12 +80,12 @@
 					{
 						<li class="nav-item">
 							<a class="nav-link" href="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
-								Inventory <span class="badge rounded-pill bg-primary ps-2">@Model.GetRemainingInventoryCount()</span>
+								Inventory <span class="badge rounded-pill bg-primary ps-2">@Model.ecLogNotif.remainingInventoryCount</span>
 							</a>
 						</li>
 					}
 
-					@if (@Model.GetRemainingPackCount() == 0)
+					@if (@Model.ecLogNotif.remainingPackCount == 0)
 					{
 						<li class="nav-item">
 							<a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
@@ -97,12 +97,12 @@
 					{
 						<li class="nav-item">
 							<a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
-								Relief Goods Pack <span class="badge rounded-pill bg-primary ps-2">@Model.GetRemainingPackCount()</span>
+								Relief Goods Pack <span class="badge rounded-pill bg-primary ps-2">@Model.ecLogNotif.remainingPackCount</span>
 							</a>
 						</li>
 					}
 
-					@if (@Model.GetRemainingAssessmentCount() == 0)
+					@if (@Model.ecLogNotif.remainingAssessmentCount == 0)
 					{
 						<li class="nav-item">
 							<a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">
@@ -114,7 +114,7 @@
 					{
 						<li class="nav-item">
 							<a class="nav-link" href="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">
-								Vulnerability Assessment <span class="badge rounded-pill bg-primary ps-2">@Model.GetRemainingAssessmentCount()</span>
+								Vulnerability Assessment <span class="badge rounded-pill bg-primary ps-2">@Model.ecLogNotif.remainingAssessmentCount</span>
 							</a>
 						</li>
 					}
@@ -128,36 +128,36 @@
 				<option value="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</option>
 				<option value="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</option>
 				<option value="/disaster/profile/staffassignment/index?centerLogID=@Model.logInfo.centerLogID">Staff Assignment</option>
-				@if (@Model.GetRemainingInventoryCount() == 0)
+				@if (@Model.ecLogNotif.remainingInventoryCount == 0)
 				{
 					<option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">Inventory</option>
 				}
 				else
 				{
 					<option value="/disaster/profile/inventory/index?centerLogID=@Model.logInfo.centerLogID">
-						Inventory <span>(@Model.GetRemainingInventoryCount())</span>
+						Inventory <span>(@Model.ecLogNotif.remainingInventoryCount)</span>
 					</option>
 				}
 
-				@if (@Model.GetRemainingPackCount() == 0)
+				@if (@Model.ecLogNotif.remainingPackCount == 0)
 				{
 					<option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">Relief Goods Pack</option>
 				}
 				else
 				{
 					<option value="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
-						Relief Goods Pack <span>(@Model.GetRemainingPackCount())</span>
+						Relief Goods Pack <span>(@Model.ecLogNotif.remainingPackCount)</span>
 					</option>
 				}
 
-				@if (@Model.GetRemainingAssessmentCount() == 0)
+				@if (@Model.ecLogNotif.remainingAssessmentCount == 0)
 				{
 					<option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">Vulnerability Assessment</option>
 				}
 				else
 				{
 					<option value="/disaster/profile/vulnerabilityassessment/index?centerLogID=@Model.logInfo.centerLogID">
-						Vulnerability Assessment <span>(@Model.GetRemainingAssessmentCount())</span>
+						Vulnerability Assessment <span>(@Model.ecLogNotif.remainingAssessmentCount)</span>
 					</option>
 				}
 
