--- a/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
+++ b/Pages/Disaster/Profile/reliefgoodspack/View.cshtml
@@ -69,7 +69,7 @@
                     @if (@Model.ecLogNotif.remainingPackCount == 0)
                     {
                         <li class="nav-item">
-                            <a class="nav-link active" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
+                            <a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
                                 Relief Goods Pack
                             </a>
                         </li>
@@ -77,7 +77,7 @@
                     else
                     {
                         <li class="nav-item">
-                            <a class="nav-link active" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
+                            <a class="nav-link" href="/disaster/profile/reliefgoodspack/index?centerLogID=@Model.logInfo.centerLogID">
                                 Relief Goods Pack <span class="badge rounded-pill bg-primary ps-2">@Model.ecLogNotif.remainingPackCount</span>
                             </a>
                         </li>
