--- a/Pages/disaster/profile/informationboard/Index.cshtml
+++ b/Pages/disaster/profile/informationboard/Index.cshtml
@@ -52,7 +52,7 @@
             <div class="position-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
+                        <a class="nav-link active" href="/disaster/profile/informationboard/index?centerLogID=@Model.logInfo.centerLogID">Information Board</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Entry Log</a>
