--- a/Pages/Login/Index.cshtml
+++ b/Pages/Login/Index.cshtml
@@ -2,6 +2,7 @@
 @model AgapayAidSystem.Pages.Login.IndexModel
 @{
     ViewData["Title"] = "Login";
+    Layout = "_Login";
 }
 
 <!-- Alert Banners -->
