--- a/Pages/Shared/_Login.cshtml
+++ b/Pages/Shared/_Login.cshtml
@@ -41,7 +41,7 @@
             </a>
 
             <div>
-                <button type="button" class="btn btn-primary">Primary</button>
+                <a type="button" class="btn btn-secondary text-primary" href="/login/index">Login</a>
             </div>
         </div>
     </nav>
